# api-benchmarks

./: .gitignore  README.md  docker-compose.yml
database/: docker_postgres_init.sql
dotnet/: DockerFile  Program.cs  TodoApi.App.csproj  appsettings.json
dotnet/DbContext/: DieselSchemaMigration.cs  Todo.cs  todo_apiContext.cs
dotnet/Dto/: TodoDto.cs
dotnet/Dto/Mapping/: Mapper.cs  MappingProfile.cs
dotnet/Properties/: launchSettings.json
dotnet/Services/: TodoService.cs
go/: .env  Dockerfile  go.mod  main.go
java/api-benchmark.java.vertx/: Dockerfile  pom.xml
java/api-benchmark.java.vertx/src/main/java/com/baseflow/apibenchmark/: MainVerticle.java  Todo.java
nodejs/: .pnp.cjs  DockerFile  README.md  package.json  tsconfig.json
nodejs/src/: index.ts
nodejs/src/database/: database.ts  todo.entity.ts
nodejs/src/types/: environment.d.ts
rust/: .env  Cargo.toml  DockerFile  docker-compose.yml
rust/migrations/2022-07-15-124543_create_todos/: up.sql
rust/src/: main.rs  schema.rs
rust/src/api/: mod.rs  todo_controller.rs
rust/src/models/: error_response.rs  mod.rs  todo.rs
speedtests/: docker-compose.yml  run-load-test.ps1  run-load-test.sh
speedtests/scripts/: dotnet.js  go.js  node.js  rust.js
